# rust-practice

actix-mongo/: Cargo.toml  README.md  actix-mongo.postman_collection.json  docker-compose.yml
actix-mongo/src/: main.rs
actix-mongo/src/api/: user_api.rs
actix-mongo/src/repository/: mongodb_repo.rs
auth-2fa-actix/: 2fa.postman_collection.json  Cargo.toml  Makefile  README.md  docker-compose.yml
auth-2fa-actix/migrations/2024-02-14-174053_create_users_table/: up.sql
auth-2fa-actix/src/: db.rs  main.rs  model.rs  response.rs  schema.rs  service.rs
auth-2fa-actix/src/middleware/: auth_middleware.rs
chat-app-actix/: .gitignore  Cargo.toml  README.md
chat-app-actix/src/: main.rs  schema.rs  server.rs  session.rs
graphql-ex/: Cargo.toml  README.md  docker-compose.yml
graphql-ex/src/: main.rs
graphql-ex/src/config/: mongo.rs
graphql-ex/src/handler/: graphql_handler.rs
graphql-ex/src/schemas/: project_schema.rs
jwt-auth-actix-sqlx/: .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql  jwt-auth-actix-sqlx.postman_collection.json
jwt-auth-actix-sqlx/src/: main.rs
jwt-auth-actix-sqlx/src/middlewares/: auth_middleware.rs
jwt-auth-actix-sqlx/src/services/: auth_service.rs
speed-test-ws-actix/: .gitignore  Cargo.toml  README.md
speed-test-ws-actix/src/: main.rs  server.rs
speed-test-ws-actix/ui/: package-lock.json
speed-test-ws-actix/ui/src/: App.tsx  index.css
tokio-ex/: Cargo.toml  README.md
tokio-ex/src/: main.rs
websockets-actix-actors/: Cargo.toml  README.md
websockets-actix-actors/src/: lobby.rs  main.rs  routes.rs
