[package]
name = "chat-app-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.2"
actix-files = "0.6.5"
actix-web = "4.4.1"
actix-web-actors = "4.1.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
chrono = "0.4.23"
actix-cors = "0.6.4"
