[package]
name = "graphql-ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
async-graphql = { version = "4.0", features = ["bson", "chrono"] }
async-graphql-actix-web = "4.0"
serde = "1.0.196"
dotenv = "0.15.0"
futures = "0.3.30"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]